reduced size of the circles

--- a/aboutme.html
+++ b/aboutme.html
@@ -47,7 +47,7 @@
             justify-content: space-around;
             align-items: center;
             padding: 20px;
-            gap: 15px; /* Increased space between images */
+            gap: 10px; /* Reduced space between images */
             cursor: pointer;
         }
 
@@ -68,8 +68,8 @@
 
         /* Initial Image Styles with Increased Size */
         .left-image {
-            width: 45%; /* Increased default width */
-            max-width: 300px; /* Increased max size */
+            width: 40%; /* Increased default width */
+            max-width: 250px; /* Increased max size */
             height: auto;
             transition: transform 0.3s, opacity 0.3s;
             cursor: pointer;
@@ -81,8 +81,8 @@
 
         /* Enlarged Image */
         .left-image.enlarged {
-            width: 65%; /* Larger size when enlarged */
-            max-width: 350px; /* Increased max size for enlarged */
+            width: 60%; /* Larger size when enlarged */
+            max-width: 300px; /* Increased max size for enlarged */
             z-index: 1;
         }
 
