corrected the p5js.html

--- a/projects.html
+++ b/projects.html
@@ -122,7 +122,7 @@
     </header>
 
     <main>
- 
+        <a href="p5js.html" target="_new">My P5JS Project</a>
     </main>
 
     <footer>
@@ -130,7 +130,7 @@
     </footer>
 
  
-    <script src="script/sketch.js" ></script>
+    
     
 </body>
 </html>
