--- a/projects.html
+++ b/projects.html
@@ -122,7 +122,8 @@
     </header>
 
     <main>
-        <a href="p5js.html" target="_new">My P5JS Project</a>
+        <a href="p5js.html" target="_new">My P5JS Project </a>
+        <a href="p5js.html" target="_new">My Design </a>
     </main>
 
     <footer>
