Added the Saptha page and its related files

--- a/projects.html
+++ b/projects.html
@@ -134,9 +134,9 @@
             </div>
 
             <!-- Image 2 with overlay text -->
-            <div class="grid-item" onclick="openPopup('aboutme.html', 800, 600)">
-                <img src="images/image2.jpg" alt="About Me">
-                <div class="overlay">About Me</div>
+            <div class="grid-item" onclick="openPopup('book.html', 1197, 911)">
+                <img src="images/gridbook.png" alt="About Me">
+                <div class="overlay">Saptha</div>
             </div>
 
             <!-- Image 3 with overlay text -->
