--- a/myart.html
+++ b/myart.html
@@ -12,6 +12,7 @@
             display: flex;
             flex-direction: column;
             height: 100vh;
+            overflow-x: hidden;
         }
 
         header {
@@ -36,46 +37,72 @@
 
         main {
             flex: 1;
-            display: flex;
-            overflow: hidden;
+            overflow-y: auto;
             padding: 20px;
-        }
-
-        /* Reel container to hold images */
-        .reel-container {
             display: flex;
-            gap: 10px;
-            overflow-x: auto;
-            scroll-behavior: smooth;
+            justify-content: center;
+        }
+
+        .image-container {
+            display: flex;
+            width: 80%;
+            gap: 20px;
+        }
+
+        .column {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
+        }
+
+        .column img {
             width: 100%;
-        }
-
-        /* Style for individual images */
-        .reel-image {
-            flex: 0 0 auto;
-            width: calc(100% / 3 - 10px); /* Default 3 images */
             height: auto;
-            max-height: 80vh;
-            border-radius: 10px;
+            border-radius: 8px;
             transition: transform 0.3s ease;
+            cursor: pointer;
         }
 
-        /* Hover effect */
-        .reel-image:hover {
+        .column img:hover {
             transform: scale(1.05);
+            z-index: 2;
         }
 
-        /* Responsive adjustments for different image counts */
-        @media (min-width: 768px) {
-            .reel-image {
-                width: calc(100% / 4 - 10px); /* 4 images on medium screens */
-            }
+        /* Fullscreen Overlay */
+        .overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            background-color: rgba(0, 0, 0, 0.7);
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            z-index: 3;
         }
 
-        @media (min-width: 1024px) {
-            .reel-image {
-                width: calc(100% / 5 - 10px); /* 5 images on large screens */
-            }
+        .overlay img {
+            width: auto;
+            height: 70vh;
+            border-radius: 8px;
+            object-fit: contain;
+        }
+
+        .text-box {
+            background-color: #EFD5C3;
+            margin-top: 10px;
+            padding: 10px;
+            border-radius: 8px;
+            color: #333;
+            font-family: Arial, sans-serif;
+            font-size: 1em;
+            text-align: center;
+            max-width: 90%; /* Ensure it's not wider than the screen */
+            margin-top: 10px;
         }
 
         footer {
@@ -106,25 +133,20 @@
     </header>
 
     <main>
-        <!-- Reel container holding the images -->
-        <div class="reel-container" id="reel">
-            <!-- Images from art1.jpg to art16.jpg -->
-            <img src="images/art10.png" alt="Art 1" class="reel-image">
-            <img src="images/art12.png" alt="Art 2" class="reel-image">
-            <img src="images/art3.png" alt="Art 3" class="reel-image">
-            <img src="images/art4.png" alt="Art 4" class="reel-image">
-            <img src="images/art5.png" alt="Art 5" class="reel-image">
-            <img src="images/art6.png" alt="Art 6" class="reel-image">
-            <img src="images/art7.png" alt="Art 7" class="reel-image">
-            <img src="images/art8.png" alt="Art 8" class="reel-image">
-            <img src="images/art9.png" alt="Art 9" class="reel-image">
-            <img src="images/art10.png" alt="Art 10" class="reel-image">
-            <img src="images/art11.png" alt="Art 11" class="reel-image">
-            <img src="images/art12.png" alt="Art 12" class="reel-image">
-            <img src="images/art13.png" alt="Art 13" class="reel-image">
-            <img src="images/art14.png" alt="Art 14" class="reel-image">
-            <img src="images/art15.png" alt="Art 15" class="reel-image">
-            <img src="images/art16.png" alt="Art 16" class="reel-image">
+        <div class="image-container">
+            <div class="column" id="column1"></div>
+            <div class="column" id="column2"></div>
+            <div class="column" id="column3"></div>
+            <div class="column" id="column4"></div>
+        </div>
+
+        <!-- Fullscreen Image Overlay with Text Box -->
+        <div class="overlay" id="overlay" onclick="closeOverlay()">
+            <img src="" alt="Enlarged Image" id="overlayImage">
+            <div class="text-box" id="overlayTextBox">
+                <p>Placeholder Name</p>
+                <p>Placeholder Description</p>
+            </div>
         </div>
     </main>
 
@@ -133,16 +155,62 @@
     </footer>
 
     <script>
-        // Scroll the reel horizontally on mouse wheel event
-        const reel = document.getElementById("reel");
-        reel.addEventListener("wheel", (event) => {
-            event.preventDefault();
-            // Scroll left or right based on wheel direction
-            reel.scrollBy({
-                left: event.deltaY < 0 ? -200 : 200,
-                behavior: "smooth"
+        const imageNames = [
+            'abstract1.png', 'abstract2.png', 'abstract3.png', 'abstract4.png', 'abstract5.png', 'abstract6.png',
+            'doodle1.png', 'doodle2.png', 'doodle3.png', 'doodle4.png', 'doodle5.png', 'doodle6.png',
+            'sketches1.png', 'sketches2.png', 'sketches3.png', 'sketches4.png', 'sketches5.png', 'sketches6.png'
+        ];
+
+        const columns = [
+            document.getElementById('column1'),
+            document.getElementById('column2'),
+            document.getElementById('column3'),
+            document.getElementById('column4')
+        ];
+
+        function shuffleArray(array) {
+            for (let i = array.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [array[i], array[j]] = [array[j], array[i]];
+            }
+            return array;
+        }
+
+        function displayImages() {
+            const shuffledImages = shuffleArray([...imageNames]);
+            shuffledImages.forEach((name, index) => {
+                const img = document.createElement('img');
+                img.src = `images/${name}`;
+                img.alt = name;
+                img.onclick = () => openOverlay(img.src, name);
+
+                columns[index % columns.length].appendChild(img);
             });
-        });
+        }
+
+        function openOverlay(src, name) {
+            const overlay = document.getElementById('overlay');
+            const overlayImage = document.getElementById('overlayImage');
+            const overlayTextBox = document.getElementById('overlayTextBox');
+
+            overlayImage.src = src;
+            overlayTextBox.innerHTML = `
+                <p>${name.replace('.png', '')}</p>
+                <p>Placeholder Description for ${name.replace('.png', '')}</p>
+            `;
+            overlay.style.display = 'flex';
+
+            // Adjust the text box width to match the image width
+            const imageWidth = overlayImage.offsetWidth;
+            overlayTextBox.style.width = `${imageWidth}px`;
+        }
+
+        function closeOverlay() {
+            const overlay = document.getElementById('overlay');
+            overlay.style.display = 'none';
+        }
+
+        displayImages();
     </script>
 </body>
 </html>
