renamed p5js to p5js-lights. added p5js-elements and its supporting files

--- a/p5js-elements.html
+++ b/p5js-elements.html
@@ -9,6 +9,6 @@
   <body>
     <main>
     </main>
-    <script src="script/sketch.js"></script>
+    <script src="script/elements.js"></script>
   </body>
 </html>
