--- a/projects.html
+++ b/projects.html
@@ -154,7 +154,7 @@
         <section class="left-section">
             <div class="grid-container">
                 <!-- Grid items -->
-                <div class="grid-item" onclick="openPopup('p5js.html', 800, 600)">
+                <div class="grid-item" onclick="openPopup('p5js-lights.html', 800, 600)">
                     <img src="images/gridimage1.png" alt="About Me">
                     <div class="overlay">P5JS Project</div>
                 </div>
@@ -162,7 +162,7 @@
                     <img src="images/gridbook.png" alt="About Me">
                     <div class="overlay">Saptha</div>
                 </div>
-                <div class="grid-item" onclick="openPopup('myart.html', 800, 600)">
+                <div class="grid-item" onclick="openPopup('p5js-elements.html', 750, 400)">
                     <img src="images/gridbook.png" alt="My Designs">
                     <div class="overlay">My Designs</div>
                 </div>
